--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <div class="project__info">
           <h3 class="project__title">TO-DO de contatos</h3>
           <p class="project__description">
-            Uma agenda to-do feita com node front com EJS e deploy na Google Cloud.
+            Uma agenda to-do feita com node e front end com EJS e deploy na Google Cloud.
           </p>
           <a href="https://iagomacedo.tech/" target="_blank"
             ><div class="project__live">Ver site</div></a
