--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
               <div class="skills__item-name">NODE</div>
             </div>
             <div class="skills__item skills__item--4">
-              <img src="imgs/git.3092b5991e8accb9e7c36817c048a8d5.png" alt="" />
-              <div class="skills__item-name">GIT</div>
+              <img src="imgs/mysql_logo_icon_169941.png" alt="" />
+              <div class="skills__item-name">MYSQL</div>
             </div>
           </div>
           <div class="skills__row">
