--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Iago Macêdo | Desenvolvedor Full Stack</title>
-    <link rel="icon" href="fav.png" />
+    <link rel="icon" href="/imgs/fav.png" />
     <script type="module" defer="defer" src="app.js"></script>
     <link href="style.css" rel="stylesheet" />
   </head>
