--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="about__content">
         <div class="profile">
           <div class="profile__picture">
-            <img class="profile__me" src="imgs/me-removebg-preview.png" alt="">
+            <img class="profile__me" src="imgs/me2.png" alt="">
           </div>
           <p class="profile__blurb">
             Desde que o primeiro computador chegou na minha casa, fiquei
