--- a/index.html
+++ b/index.html
@@ -205,12 +205,12 @@
     <section class="contact" id="contact">
       <h2 class="contact__heading section-heading">Contato</h2>
       <p class="contact__text">
-        Tem uma pergunta ou quer trabalhar junto? Deixe seus dados que
+        Tem uma pergunta ? Deixe seus dados que
         retornarei o mais breve possível.
       </p>
       <form
         class="contact__form"
-        action="https://formspree.io/f/xdoprgpv"
+        action="https://formspree.io/f/mknabjja"
         method="POST"
       >
         <input class="contact__form-name" name="name" placeholder="Nome" />
@@ -233,7 +233,7 @@
             </div>
             <div class="form-error__msg">Por favor coloque uma mensagem.</div>
           </div>
-          <button type="button" class="contact__form-submit">Enviar</button>
+          <button type="submit" class="contact__form-submit">Enviar</button>
         </div>
       </form>
     </section>
