--- a/index.html
+++ b/index.html
@@ -254,19 +254,21 @@
           </svg></div
       ></a>
       <div class="socials">
-        <a href="https://github.com/Iag0ow" target="_blank"
-          ><div class="socials__github">
-            <img
-              src="imgs/github-logo.d03ce87cf6b5a432c44f847eefec1204.png"
-              alt=""
-            /></div></a
-        ><a href="mailto:iagomacedo159@gmail.com" target="_blank"
-          ><div class="socials__email">
-            <img
-              src="imgs/mail.4f2db89278f9ad3abef627211b414574.png"
-              alt=""
-            /></div
-        ></a>
+        <a href="https://github.com/Iag0ow" target="_blank">
+          <div class="socials__github">
+            <img src="imgs/github-logo.d03ce87cf6b5a432c44f847eefec1204.png" alt=""/>
+          </div>
+        </a>
+        <a href="https://www.linkedin.com/in/iagomacedo/" target="_blank">
+          <div class="socials__linkedin">
+              <img src="imgs/in.png" alt=""/>
+          </div>
+        </a>
+      <a href="mailto:iagomacedo159@gmail.com" target="_blank">
+        <div class="socials__email">
+            <img src="imgs/mail.4f2db89278f9ad3abef627211b414574.png" alt=""/>
+        </div>
+      </a>
       </div>
       <p class="copyright">Iago Macêdo ©2023</p>
     </footer>
