--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
         retornarei o mais breve possível.
       </p>
       <form
+
         class="contact__form"
         action="https://formspree.io/f/mknabjja"
         method="POST"
@@ -233,7 +234,7 @@
             </div>
             <div class="form-error__msg">Por favor coloque uma mensagem.</div>
           </div>
-          <button type="submit" class="contact__form-submit">Enviar</button>
+          <button id="form-submit" type="button" class="contact__form-submit">Enviar</button>
         </div>
       </form>
     </section>
