--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
           </div>
           <div class="skills__row">
             <div class="skills__item skills__item--5">
-              <img src="imgs/typescript.5968381.png" alt="" />
-              <div class="skills__item-name">TYPESCRIPT</div>
+              <img src="imgs/laravel.png" alt="" />
+              <div class="skills__item-name">LARAVEL</div>
             </div>
             <div class="skills__item skills__item--2">
               <img src="imgs/bootstrap.logo-shadow.png" alt="" />
@@ -205,11 +205,10 @@
     <section class="contact" id="contact">
       <h2 class="contact__heading section-heading">Contato</h2>
       <p class="contact__text">
-        Tem uma pergunta ? Deixe seus dados que
+        Tem uma pergunta? Deixe seus dados que
         retornarei o mais breve possível.
       </p>
       <form
-
         class="contact__form"
         action="https://formspree.io/f/mknabjja"
         method="POST"
