--- a/index.html
+++ b/index.html
@@ -159,13 +159,14 @@
       </div>
       <div class="project project-right">
         <div class="project__info">
-          <h3 class="project__title">ReactGram</h3>
+          <h3 class="project__title">OrçaFácil</h3>
           <p class="project__description">
-            Um projeto Full Stack feito com funcionalidades do instagram.
+            Um projeto Full Stack feito para criar orçamentos, juntamente com produtos valores e marcas, ao final gerar um pdf para visualização do mesmo.
           </p>
-          <a href="https://reactgram-eight.vercel.app/" target="_blank"
+          <p>Para fazer login utilize: <br> <br> Login: easybudgetech@gmail.com <br> senha: 123456789</p>
+          <a href="https://orca-facil.vercel.app/login" target="_blank"
             ><div class="project__live">Ver site</div></a
-          ><a href="https://github.com/Iag0ow/ReactGram" target="_blank"
+          ><a href="https://github.com/Iag0ow/Orca_facil" target="_blank"
             ><div class="project__code">Ver código</div></a
           >
         </div>
@@ -173,7 +174,7 @@
           ><div class="project__image-container todo">
             <div class="project__image-image">
               <img
-                src="imgs/reactgram.png"
+                src="imgs/orca-facil.png"
                 alt=""
               />
             </div></div
@@ -184,11 +185,24 @@
           ><div class="project__image-container weather">
             <div class="project__image-image">
               <img
-                src="imgs/to-do.png"
+                src="imgs/reactgram.png"
                 alt=""
               />
             </div></div
         ></a>
+        <div class="project__info">
+          <h3 class="project__title">ReactGram</h3>
+          <p class="project__description">
+            Um projeto Full Stack feito com funcionalidades do instagram.
+          </p>
+          <a href="https://reactgram-eight.vercel.app/" target="_blank"
+            ><div class="project__live">Ver site</div></a
+          ><a href="https://github.com/Iag0ow/ReactGram" target="_blank"
+            ><div class="project__code">Ver código</div></a
+          >
+        </div>
+      </div>
+      <div class="project project-right">
         <div class="project__info">
           <h3 class="project__title">TO-DO de contatos</h3>
           <p class="project__description">
@@ -200,8 +214,19 @@
             ><div class="project__code">Ver código</div></a
           >
         </div>
+        <a href="https://reactgram-eight.vercel.app/" target="_blank"
+          ><div class="project__image-container todo">
+            <div class="project__image-image">
+              <img
+                src="imgs/to-do.png"
+                alt=""
+              />
+            </div></div
+        ></a>
       </div>
+      
     </section>
+
     <section class="contact" id="contact">
       <h2 class="contact__heading section-heading">Contato</h2>
       <p class="contact__text">
