--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
           <p class="project__description">
             Uma agenda to-do feita com node e front end com EJS e deploy na Google Cloud.
           </p>
-          <a href="https://iagomacedo.tech/" target="_blank"
-            ><div class="project__live">Ver site</div></a
+          <!-- <a href="https://iagomacedo.tech/" target="_blank"
+            ><div class="project__live">Ver site</div></a -->
           ><a href="https://github.com/Iag0ow/ProjetoAgenda" target="_blank"
             ><div class="project__code">Ver código</div></a
           >
