--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="about__content">
         <div class="profile">
           <div class="profile__picture">
-            <img class="profile__me" src="imgs/me2.png" alt="">
+            <img class="profile__me" src="https://avatars.githubusercontent.com/u/90112622?s=400&u=d746c3a002e12d275af6328c8eee467fd2f461ae&v=4" alt="">
           </div>
           <p class="profile__blurb">
             Desde que o primeiro computador chegou na minha casa, fiquei
